--- a/intro-section-with-dropdown-navigation-main/.gitignore
+++ b/intro-section-with-dropdown-navigation-main/.gitignore
@@ -2,21 +2,21 @@
 #####################################################
 ## Please do not remove lines 5 and 6 - thanks! 🙂 ##
 #####################################################
-**/*.sketch
-**/*.fig
+*.sketch
+*.fig
 
 # Avoid accidental XD upload if you convert the design file
 ###############################################
 ## Please do not remove line 12 - thanks! 🙂 ##
 ###############################################
-**/*.xd
+*.xd
 
 # Avoid your project being littered with annoying .DS_Store files!
-**/.DS_Store
-**/.prettierignore
+.DS_Store
+.prettierignore
 
-**/README.md
-**/README-template.md
-**/style-guide.md
+README.md
+README-template.md
+style-guide.md
 
-**/design/
+design/
